优化移动端和PC端适配，改进界面样式

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>👑投资平台👑</h1>
+            <h1>👑 高收益投资平台 👑</h1>
             <div class="stats">
                 <div class="stat-item">
                     <span class="label">在线人数</span>
