更新: 重新设计界面，添加数字按钮和底部菜单

--- a/index.html
+++ b/index.html
@@ -4,30 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>投资平台</title>
-    <link rel="stylesheet" href="css/style.css?v=1.0.1">
+    <link rel="stylesheet" href="css/style.css?v=1.0.2">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>👑 高收益投资平台 👑</h1>
-            <div class="stats">
-                <div class="stat-item">
-                    <span class="label">在线人数</span>
-                    <span class="value" id="online-count">0</span>
-                </div>
-                <div class="stat-item">
-                    <span class="label">总成员</span>
-                    <span class="value" id="member-count">0</span>
-                </div>
+            <h1>👑 投资理财平台 👑</h1>
+            <div class="announcement">
+                <p>🔥 全行业数据商[南风数据]✨, 运营商数据</p>
+                <p>💫 股民 ✨ 博彩 ✨ 贷款 ✨ 珍珠 ✨ POS ✨ 百万等各类配套数据</p>
             </div>
         </div>
-        <div class="content">
-            <div class="investment-list" id="investment-list">
-                <!-- 投资项目将通过 JavaScript 动态添加 -->
+        <div class="menu-grid">
+            <div class="menu-row">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+            </div>
+            <div class="menu-row">
+                <button>8</button>
+                <button>9</button>
+                <button>10</button>
+                <button>11</button>
+                <button>12</button>
+                <button>13</button>
+                <button>14</button>
+            </div>
+            <div class="menu-row">
+                <button>15</button>
+                <button>16</button>
+                <button>17</button>
+                <button>18</button>
+                <button>19</button>
+                <button>20</button>
+            </div>
+        </div>
+        <div class="action-buttons">
+            <button class="action-btn ad-btn">🔥 购买广告</button>
+            <button class="action-btn next-btn">➡️ 下一页</button>
+        </div>
+        <div class="special-offers">
+            <div class="offer-item">🔥 IM体育: 1个有效即享55%-70%-可...</div>
+            <div class="offer-item">🎭升元棋牌❤️ 贷盈利70%分成招商❤️...</div>
+            <div class="offer-item">🏠注册送138🎲百家乐/棋牌/电竞体育...</div>
+        </div>
+        <div class="bottom-menu">
+            <div class="menu-item">
+                <span class="icon">📋</span>
+                <span>官方简介</span>
+            </div>
+            <div class="menu-item">
+                <span class="icon">📁</span>
+                <span>分类</span>
+            </div>
+            <div class="menu-item">
+                <span class="icon">👤</span>
+                <span>我的</span>
+            </div>
+            <div class="menu-item">
+                <span class="icon">💰</span>
+                <span>推广赚钱</span>
+            </div>
+            <div class="menu-item">
+                <span class="icon">📢</span>
+                <span>广告投放</span>
+            </div>
+            <div class="menu-item">
+                <span class="icon">❓</span>
+                <span>帮助</span>
             </div>
         </div>
     </div>
-    <script src="js/app.js?v=1.0.1"></script>
+    <script src="js/app.js?v=1.0.2"></script>
 </body>
 </html> 
