feat: Add URL display in WebApp
Changes:
- Added URL display container in HTML
- Added URL display styles in CSS
- Added URL parameter parsing in JavaScript
- Enhanced user info display
- Improved WebApp integration

Technical details:
- Added DOM ready event handler
- Added Telegram WebApp ready handler
- Added URL parameter display
- Improved styling and layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div id="url-display" class="url-display"></div>
         <div class="header">
             <h1>👑 投资理财平台 👑</h1>
             <div class="announcement">
