feat: Update Telegram bot
Changes:
- Added user info to all responses
- Improved message formatting
- Enhanced admin notifications
- Fixed category display issue
- Optimized code structure

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <p>💫 股民 ✨ 博彩 ✨ 贷款 ✨ 珍珠 ✨ POS ✨ 百万等各类配套数据</p>
             </div>
         </div>
+        <div id="investment-list" class="investment-list"></div>
         <div class="menu-grid">
             <div class="menu-row">
                 <button>1</button>
