--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>投资平台</title>
     <link rel="stylesheet" href="css/style.css?v=1.0.2">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <meta name="robots" content="noindex, nofollow">
+    <script>
+        // 页面加载时立即记录 URL
+        console.log('Page initially loaded at:', new Date().toISOString());
+        console.log('Initial URL:', window.location.href);
+        
+        // 监听 URL 变化
+        let lastUrl = window.location.href;
+        new MutationObserver(() => {
+            const url = window.location.href;
+            if (url !== lastUrl) {
+                console.log('URL changed to:', url);
+                lastUrl = url;
+            }
+        }).observe(document, {subtree: true, childList: true});
+    </script>
 </head>
 <body>
     <div id="url-display" class="url-display"></div>
