feat: Update bot and webapp

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             </div>
         </div>
     </div>
+    <div id="params-container"></div>
     <script src="js/app.js?v=1.0.4"></script>
 </body>
 </html> 
